<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/direction_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    card_view:cardElevation="@dimen/_5sdp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:text="@string/question_num"
                android:layout_marginTop="@dimen/_8sdp"/>

            <ImageView
                android:id="@+id/question_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/goodmark"
                android:layout_weight="1"/>

        </LinearLayout>



        <TextView
            android:id="@+id/real_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:text="@string/question"
            android:layout_marginTop="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/your_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/your_answer"
            android:layout_marginTop="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/correct_answer"
            android:layout_marginTop="@dimen/_16sdp"/>


    </LinearLayout>

</android.support.v7.widget.CardView>