<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="fr.utt.bulat.QuizMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/quiz_logo"/>

        <Button
            android:id="@+id/text_quiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/icons"
            android:text="@string/text_quiz"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"/>

        <Button
            android:id="@+id/extra_word_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/icons"
            android:text="@string/picture_quiz"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"/>

        <Button
            android:id="@+id/quiz_instruction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/icons"
            android:text="@string/quiz_instruction"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"/>
        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:background="@color/colorPrimaryRed"
            android:textColor="@color/icons"
            android:text="@string/reset"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"/>

    </LinearLayout>

</LinearLayout>
