<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="fr.utt.bulat.QuizResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.github.pavlospt.CircleView
                android:id="@+id/pass"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:cv_titleSubtitleSpace="40"
                app:cv_fillColor="@color/colorPrimaryGreen"
                app:cv_strokeColorValue="@color/colorPrimaryDark"
                app:cv_backgroundColorValue="@color/colorPrimaryDark"
                app:cv_titleColor="@color/colorPrimary"
                app:cv_titleSize="@dimen/_30sdp"
                app:cv_titleText="@string/total_best_score"
                app:cv_subtitleSize="@dimen/_14sdp"
                app:cv_subtitleText="@string/pass"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.github.pavlospt.CircleView
                android:id="@+id/fail"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:cv_titleSubtitleSpace="40"
                app:cv_fillColor="@color/colorPrimaryRed"
                app:cv_strokeColorValue="@color/colorPrimaryDark"
                app:cv_backgroundColorValue="@color/colorPrimaryDark"
                app:cv_titleColor="@color/colorPrimary"
                app:cv_titleSize="@dimen/_30sdp"
                app:cv_titleText="@string/total_best_score"
                app:cv_subtitleSize="@dimen/_14sdp"
                app:cv_subtitleText="@string/fail"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/retake_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:text="@string/retake_quiz"
        android:layout_marginTop="@dimen/_80sdp"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:text="@string/view_result"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>
