<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/activity_main_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.utt.bulat.MainPictureActivity">

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_count"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/picture_image"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/question_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/car1" />

        <Button
            android:id="@+id/answer_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_16sdp" />

    </LinearLayout>

</ScrollView>